# QuantBench_Crew

./: .env.example  .gitignore  CLAUDE.md  README.md  draft_plan.md  environment.yml  paper_metadata_enriched.csv  paper_metadata_enriched.md  pyproject.toml  urls.txt
Source_data/job_description/: GoldmanSachs.md
Source_data/transcript/: algo_trading_with_kevin_davey_video_list.csv  algo_trading_with_kevin_davey_video_list.md  algo_trading_with_kevin_davey_video_list_full.md  algovibes_video_list.csv  algovibes_video_list.md  algovibes_video_list_full.md  bill_ackman_playlist_video_list.csv  bill_ackman_playlist_video_list.md  carl_icahn_playlist_video_list.csv  carl_icahn_playlist_video_list_full.md  chase_coleman_playlist_video_list.csv  chase_coleman_playlist_video_list.md  chat_with_traders_video_list.csv  chat_with_traders_video_list.md  christina_qi_playlist_video_list.csv  christina_qi_playlist_video_list.md  cliff_asness_playlist_video_list.csv  cliff_asness_playlist_video_list.md  dan_loeb_playlist_video_list.csv  dan_loeb_playlist_video_list_full.md  david_shaw_playlist_video_list.csv  david_shaw_playlist_video_list.md  david_siegel_playlist_video_list.csv  david_siegel_playlist_video_list_full.md  dimitri_bianco_video_list.csv  dimitri_bianco_video_list.md  dimitri_bianco_video_list_full.md  ed_thorp_playlist_video_list.csv  ed_thorp_playlist_video_list.md  (+88 more)
chat_with_traders_transcripts_api_test/: transcript_index.csv
configs/: agents.yaml  benchmarks.yaml  tasks.yaml
docs/: architecture.md  coder-skills.md  memory-and-feedback.md  phase2-design.md  phase2-status.md  skills-design.md
scripts/: build_notebooklm_transcript_index.mjs  markdown_playlist_to_csv.mjs  notebooklm_cwt_browser_helper.mjs  notebooklm_md.py  save_youtube_channel_video_list.py  scrape_youtube_channel_subtitles.py
skills/: README.md
tests/: conftest.py  test_agent_skills.py  test_artifacts.py  test_arxiv.py  test_arxiv_tool.py  test_bench_research_skills.py  test_charter_relevance.py  test_claim_enumeration.py  test_claims.py  test_code_runner.py  test_codegen_skill.py  test_coder.py  test_config.py  test_consult_reader_skill.py  test_contract.py  test_crsp.py  test_datasets.py  test_e2e.py  test_eval.py  test_evaluator.py  test_extraction_skills.py  test_feedback.py  test_generation_depth.py  test_llm.py  test_llm_router.py  test_memory.py  test_method_spec_fulltext.py  test_metric_synthesis.py  test_metrics_extended.py  test_models.py  test_numeric.py  test_paper_queue.py  test_pipeline_smoke.py  test_protocols.py  test_query_pool.py  test_reader.py  test_reader_components.py  test_red_flag.py  test_relevance_scorer.py  test_reviewer_research_skills.py  (+13 more)
(+4955 files in other folders)
