[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantbench-crew"
version = "0.1.0"
description = "Multi-agent research assistant for quantitative finance paper benchmarking."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "QuantBench Crew Contributors" }
]
license = { text = "TBD" }
keywords = ["quantitative-finance", "research", "benchmarking", "agents"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
paperqa = [
  "paper-qa>=5,<2027",
]
# Real-data and ML paths only. The stdlib dry workflow never requires these;
# every skill that uses them checks quantbench_crew.numeric.*_available().
numeric = [
  "numpy>=1.26",
  "pandas>=2.0",
  "scikit-learn>=1.3",
]

[project.scripts]
quantbench = "quantbench_crew.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
quantbench_crew = ["prompts/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "e2e: full-pipeline golden-paper and synthetic-noise-gate tests",
]
